src/sections/location-page/MapSection.css
/* Button: Back to Home at the top of the screen */
.map-container {
  position: relative;
  min-width: 100%;
}

.map-container .btn-container {
  position: absolute;
}

/* Map: Map image */
.map-container__map {
  height: 574px;
}

.map-container__map img {
  min-width: 100%;
}

